--- a/admin/footer.html
+++ b/admin/footer.html
@@ -1,7 +1,7 @@
     <!-- Footer -->
  
 		<div class="footer navbar-fixed-bottom">
-            <p>Copyright &copy; xiaoxiaoleo 2015</p>
+            <p>Copyright &copy; 小绿草安全小组 2015</p>
         </div>
   
 
